# omnivision-fwldr

./: .gitignore  Cargo.lock.license  Cargo.toml  README.md  get_firmware.sh  install.sh
assets/udev/: 50-pscam.rules
src/: main.rs
